[tool.poetry]
name = "vgarus-client"
version = "0.1.0"
description = ""
authors = ["Kirill Varchenko <kirill.varchenko@gmail.com>"]
readme = "README.md"
packages = [{include = "vgarus_client"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.2"
tqdm = "^4.64.1"
pydantic = "^1.10.4"
python-dotenv = "^0.21.1"
pyfastx = "^0.9.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
hypothesis = "^6.75.3"

[tool.poetry.scripts]
vgarus = 'vgarus_client.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
line_length = 88
profile = "black"
